Project6/startCode/parse.output
Grammar

    0 $accept: start $end

    1 start: file_input
    2      | encoding_decl
    3      | single_input

    4 single_input: NEWLINE
    5             | stmt

    6 file_input: star_NEWLINE_stmt ENDMARKER

    7 pick_NEWLINE_stmt: NEWLINE
    8                  | stmt

    9 star_NEWLINE_stmt: pick_NEWLINE_stmt star_NEWLINE_stmt
   10                  | %empty

   11 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT dotted_name NEWLINE

   13 opt_arglist: arglist
   14            | %empty

   15 decorators: decorator decorators
   16           | decorator

   17 decorated: decorators classdef
   18          | decorators funcdef

   19 funcdef: DEF NAME parameters COLON suite

   20 parameters: LPAR varargslist RPAR
   21           | LPAR RPAR

   22 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   23            | fpdef opt_EQUAL_test star_COMMA_fpdef

   24 opt_EQUAL_test: EQUAL test
   25               | %empty

   26 star_fpdef_COMMA: fpdef opt_EQUAL_test COMMA star_fpdef_COMMA
   27                 | %empty

   28 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   29                    | %empty

   30 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   31                     | DOUBLESTAR NAME

   32 fpdef: NAME
   33      | LPAR fplist RPAR

   34 fplist: fpdef star_fpdef_notest

   35 stmt: simple_stmt
   36     | compound_stmt

   37 simple_stmt: small_stmt small_stmt_STAR_OR_SEMI NEWLINE

   38 small_stmt: expr_stmt
   39           | print_stmt
   40           | del_stmt
   41           | pass_stmt
   42           | flow_stmt
   43           | import_stmt
   44           | global_stmt
   45           | exec_stmt
   46           | assert_stmt

   47 expr_stmt: testlist PLUSEQUAL pick_yield_expr_testlist
   48          | testlist MINEQUAL pick_yield_expr_testlist
   49          | testlist STAREQUAL pick_yield_expr_testlist
   50          | testlist SLASHEQUAL pick_yield_expr_testlist
   51          | testlist PERCENTEQUAL pick_yield_expr_testlist
   52          | testlist AMPEREQUAL pick_yield_expr_testlist
   53          | testlist VBAREQUAL pick_yield_expr_testlist
   54          | testlist CIRCUMFLEXEQUAL pick_yield_expr_testlist
   55          | testlist LEFTSHIFTEQUAL pick_yield_expr_testlist
   56          | testlist RIGHTSHIFTEQUAL pick_yield_expr_testlist
   57          | testlist DOUBLESTAREQUAL pick_yield_expr_testlist
   58          | testlist DOUBLESLASHEQUAL pick_yield_expr_testlist
   59          | testlist star_EQUAL

   60 pick_yield_expr_testlist: yield_expr
   61                         | testlist

   62 star_EQUAL: EQUAL pick_yield_expr_testlist star_EQUAL
   63           | %empty

   64 print_stmt: PRINT opt_test
   65           | PRINT RIGHTSHIFT test opt_test_2

   66 opt_test: test star_COMMA_test
   67         | %empty

   68 opt_test_2: plus_COMMA_test
   69           | %empty

   70 del_stmt: DEL exprlist

   71 pass_stmt: PASS

   72 flow_stmt: break_stmt
   73          | continue_stmt
   74          | return_stmt
   75          | raise_stmt
   76          | yield_stmt

   77 break_stmt: BREAK

   78 continue_stmt: CONTINUE

   79 return_stmt: RETURN testlist
   80            | RETURN

   81 yield_stmt: yield_expr

   82 raise_stmt: RAISE test opt_test_3
   83           | RAISE

   84 opt_COMMA_test: COMMA test
   85               | %empty

   86 opt_test_3: COMMA test opt_COMMA_test
   87           | %empty

   88 import_stmt: import_name
   89            | import_from

   90 import_name: IMPORT dotted_as_names

   91 import_from: FROM star_DOT dotted_name IMPORT pick_STAR_import
   92            | FROM plus_DOT IMPORT pick_STAR_import

   93 star_DOT: DOT star_DOT
   94         | %empty

   95 plus_DOT: DOT plus_DOT
   96         | DOT

   97 pick_STAR_import: STAR
   98                 | LPAR import_as_names RPAR
   99                 | import_as_names

  100 import_as_name: NAME AS NAME
  101               | NAME

  102 dotted_as_name: dotted_name AS NAME
  103               | dotted_name

  104 import_as_names: import_as_name star_COMMA_import_as_name

  105 dotted_as_names: dotted_as_name
  106                | dotted_as_names COMMA dotted_as_name

  107 dotted_name: NAME
  108            | dotted_name DOT NAME

  109 global_stmt: global_stmt COMMA NAME
  110            | GLOBAL NAME

  111 exec_stmt: EXEC expr IN test opt_COMMA_test
  112          | EXEC expr

  113 assert_stmt: ASSERT test COMMA test
  114            | ASSERT test

  115 compound_stmt: if_stmt
  116              | while_stmt
  117              | for_stmt
  118              | try_stmt
  119              | with_stmt
  120              | funcdef
  121              | classdef
  122              | decorated

  123 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  124        | IF test COLON suite star_ELIF

  125 star_ELIF: ELIF test COLON suite star_ELIF
  126          | %empty

  127 while_stmt: WHILE test COLON suite ELSE COLON suite
  128           | WHILE test COLON suite

  129 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  130         | FOR exprlist IN testlist COLON suite

  131 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  132         | TRY COLON suite FINALLY COLON suite

  133 plus_except: except_clause COLON suite plus_except
  134            | except_clause COLON suite

  135 opt_ELSE: ELSE COLON suite
  136         | %empty

  137 opt_FINALLY: FINALLY COLON suite
  138            | %empty

  139 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  140 star_COMMA_with_item: COMMA with_item star_COMMA_with_item
  141                     | %empty

  142 with_item: test AS expr
  143          | test

  144 except_clause: EXCEPT test opt_AS_COMMA
  145              | EXCEPT

  146 pick_AS_COMMA: AS
  147              | COMMA

  148 opt_AS_COMMA: pick_AS_COMMA test
  149             | %empty

  150 suite: simple_stmt
  151      | NEWLINE INDENT plus_stmt DEDENT

  152 plus_stmt: stmt plus_stmt
  153          | stmt

  154 testlist_safe: old_test plus_COMMA_old_test
  155              | old_test

  156 old_test: or_test
  157         | old_lambdef

  158 old_lambdef: LAMBDA varargslist COLON old_test
  159            | LAMBDA COLON old_test

  160 test: or_test opt_IF_ELSE
  161     | lambdef

  162 opt_IF_ELSE: IF or_test ELSE test
  163            | %empty

  164 or_test: and_test
  165        | or_test OR and_test

  166 and_test: not_test
  167         | and_test AND not_test

  168 not_test: NOT not_test
  169         | comparison

  170 comparison: expr
  171           | comparison comp_op expr

  172 comp_op: LESS
  173        | GREATER
  174        | EQEQUAL
  175        | GREATEREQUAL
  176        | LESSEQUAL
  177        | GRLT
  178        | NOTEQUAL
  179        | IN
  180        | NOT IN
  181        | IS
  182        | IS NOT

  183 expr: xor_expr
  184     | expr BAR xor_expr

  185 xor_expr: and_expr
  186         | xor_expr CIRCUMFLEX and_expr

  187 and_expr: shift_expr
  188         | and_expr AMPERSAND shift_expr

  189 shift_expr: arith_expr
  190           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  191 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  192                          | RIGHTSHIFT

  193 arith_expr: term
  194           | arith_expr PLUS term
  195           | arith_expr MINUS term

  196 term: factor
  197     | term STAR factor
  198     | term SLASH factor
  199     | term PERCENT factor
  200     | term DOUBLESLASH factor

  201 factor: PLUS factor
  202       | MINUS factor
  203       | TILDE factor
  204       | power

  205 power: atom star_trailer DOUBLESTAR factor
  206      | atom star_trailer

  207 star_trailer: trailer star_trailer
  208             | %empty

  209 atom: LPAR opt_yield_test RPAR
  210     | LSQB opt_listmaker RSQB
  211     | LBRACE opt_dictorsetmaker RBRACE
  212     | BACKQUOTE testlist1 BACKQUOTE
  213     | NAME
  214     | INTNUMBER
  215     | FLOATNUMBER
  216     | plus_STRING

  217 pick_yield_expr_testlist_comp: yield_expr
  218                              | testlist_comp

  219 opt_yield_test: pick_yield_expr_testlist_comp
  220               | %empty

  221 opt_listmaker: listmaker
  222              | %empty

  223 opt_dictorsetmaker: dictorsetmaker
  224                   | %empty

  225 plus_STRING: STRING plus_STRING
  226            | STRING

  227 listmaker: test list_for
  228          | test star_COMMA_test

  229 testlist_comp: test comp_for
  230              | test star_COMMA_test

  231 lambdef: LAMBDA varargslist COLON test
  232        | LAMBDA COLON test

  233 trailer: LPAR opt_arglist RPAR
  234        | LSQB subscriptlist RSQB
  235        | DOT NAME

  236 subscriptlist: subscript star_COMMA_subscript

  237 subscript: DOT DOT DOT
  238          | test
  239          | opt_test_only COLON opt_test_only opt_sliceop

  240 opt_test_only: test
  241              | %empty

  242 opt_sliceop: sliceop
  243            | %empty

  244 sliceop: COLON test
  245        | COLON

  246 exprlist: expr star_COMMA_expr

  247 testlist: test star_COMMA_test

  248 dictorsetmaker: test COLON test pick_comp_for
  249               | test pick_for_test

  250 pick_comp_for: comp_for
  251              | star_test_COLON_test

  252 pick_for_test: comp_for
  253              | star_COMMA_test

  254 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  255         | CLASS NAME COLON suite

  256 opt_testlist: testlist
  257             | %empty

  258 arglist: argument COMMA arglist
  259        | argument COMMA
  260        | argument
  261        | listarg COMMA arglist_postlist
  262        | listarg
  263        | dictarg

  264 argument: test opt_comp_for
  265         | test EQUAL test

  266 opt_comp_for: comp_for
  267             | %empty

  268 list_iter: list_for
  269          | list_if

  270 list_for: FOR exprlist IN testlist_safe list_iter
  271         | FOR exprlist IN testlist_safe

  272 list_if: IF old_test list_iter
  273        | IF old_test

  274 comp_iter: comp_for
  275          | comp_if

  276 comp_for: FOR exprlist IN or_test comp_iter
  277         | FOR exprlist IN or_test

  278 comp_if: IF old_test comp_iter
  279        | IF old_test

  280 testlist1: test
  281          | testlist1 COMMA test

  282 encoding_decl: NAME

  283 yield_expr: YIELD testlist
  284           | YIELD

  285 star_fpdef_notest: COMMA fpdef star_fpdef_notest
  286                  | COMMA
  287                  | %empty

  288 star_COMMA_expr: COMMA expr star_COMMA_expr
  289                | COMMA
  290                | %empty

  291 star_COMMA_fpdef: COMMA fpdef opt_EQUAL_test star_COMMA_fpdef
  292                 | COMMA
  293                 | %empty

  294 star_COMMA_test: COMMA test star_COMMA_test
  295                | COMMA
  296                | %empty

  297 star_test_COLON_test: COMMA test COLON test star_test_COLON_test
  298                     | COMMA
  299                     | %empty

  300 star_COMMA_subscript: COMMA subscript star_COMMA_subscript
  301                     | COMMA
  302                     | %empty

  303 star_COMMA_import_as_name: COMMA import_as_name star_COMMA_import_as_name
  304                          | COMMA
  305                          | %empty

  306 plus_COMMA_test: COMMA test plus_COMMA_test
  307                | COMMA test COMMA
  308                | COMMA test

  309 plus_COMMA_old_test: COMMA old_test plus_COMMA_old_test
  310                    | COMMA old_test COMMA
  311                    | COMMA old_test

  312 dictarg: DOUBLESTAR test

  313 listarg: STAR test

  314 arglist_postlist: argument COMMA arglist_postlist
  315                 | dictarg
  316                 | argument

  317 small_stmt_STAR_OR_SEMI: SEMI small_stmt small_stmt_STAR_OR_SEMI
  318                        | SEMI
  319                        | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPERSAND (258) 188
AND (259) 167
AS (260) 100 102 142 146
ASSERT (261) 113 114
AT (262) 11 12
BACKQUOTE (263) 212
BAR (264) 184
BREAK (265) 77
CIRCUMFLEX (266) 186
CLASS (267) 254 255
COLON (268) 19 123 124 125 127 128 129 130 131 132 133 134 135 137
    139 158 159 231 232 239 244 245 248 254 255 297
COMMA (269) 26 28 84 86 106 109 113 140 147 258 259 261 281 285 286
    288 289 291 292 294 295 297 298 300 301 303 304 306 307 308 309
    310 311 314
CONTINUE (270) 78
DEDENT (271) 151
DEF (272) 19
DEL (273) 70
DOT (274) 93 95 96 108 235 237
DOUBLESLASH (275) 200
DOUBLESTAR (276) 28 31 205 312
ELIF (277) 125
ELSE (278) 123 127 129 135 162
ENDMARKER (279) 6
EQEQUAL (280) 174
EQUAL (281) 24 62 265
EXCEPT (282) 144 145
EXEC (283) 111 112
FINALLY (284) 132 137
FOR (285) 129 130 270 271 276 277
FROM (286) 91 92
GLOBAL (287) 110
GREATER (288) 173
GREATEREQUAL (289) 175
GRLT (290) 177
IF (291) 123 124 162 272 273 278 279
IMPORT (292) 90 91 92
IN (293) 111 129 130 179 180 270 271 276 277
INDENT (294) 151
IS (295) 181 182
LAMBDA (296) 158 159 231 232
LBRACE (297) 211
LESSEQUAL (298) 176
LEFTSHIFT (299) 191
LESS (300) 172
LPAR (301) 11 20 21 33 98 209 233 254
LSQB (302) 210 234
MINUS (303) 195 202
NEWLINE (304) 4 7 11 12 37 151
NOT (305) 168 180 182
NOTEQUAL (306) 178
OR (307) 165
PASS (308) 71
PERCENT (309) 199
PLUS (310) 194 201
PRINT (311) 64 65
RAISE (312) 82 83
RBRACE (313) 211
RETURN (314) 79 80
RIGHTSHIFT (315) 65 192
RPAR (316) 11 20 21 33 98 209 233 254
RSQB (317) 210 234
SEMI (318) 317 318
SLASH (319) 198
STAR (320) 30 97 197 313
STRING (321) 225 226
TILDE (322) 203
TRY (323) 131 132
WHILE (324) 127 128
WITH (325) 139
YIELD (326) 283 284
PLUSEQUAL (327) 47
MINEQUAL (328) 48
PERCENTEQUAL (329) 51
SLASHEQUAL (330) 50
STAREQUAL (331) 49
AMPEREQUAL (332) 52
CIRCUMFLEXEQUAL (333) 54
DOUBLESTAREQUAL (334) 57
LEFTSHIFTEQUAL (335) 55
RIGHTSHIFTEQUAL (336) 56
VBAREQUAL (337) 53
DOUBLESLASHEQUAL (338) 58
FLOATNUMBER (339) 215
INTNUMBER (340) 214
NAME (341) 19 28 30 31 32 100 101 102 107 108 109 110 213 235 254 255
    282


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
start (88)
    on left: 1 2 3, on right: 0
single_input (89)
    on left: 4 5, on right: 3
file_input (90)
    on left: 6, on right: 1
pick_NEWLINE_stmt (91)
    on left: 7 8, on right: 9
star_NEWLINE_stmt (92)
    on left: 9 10, on right: 6 9
decorator (93)
    on left: 11 12, on right: 15 16
opt_arglist (94)
    on left: 13 14, on right: 11 233
decorators (95)
    on left: 15 16, on right: 15 17 18
decorated (96)
    on left: 17 18, on right: 122
funcdef (97)
    on left: 19, on right: 18 120
parameters (98)
    on left: 20 21, on right: 19
varargslist (99)
    on left: 22 23, on right: 20 158 231
opt_EQUAL_test (100)
    on left: 24 25, on right: 23 26 291
star_fpdef_COMMA (101)
    on left: 26 27, on right: 22 26
opt_DOUBLESTAR_NAME (102)
    on left: 28 29, on right: 30
pick_STAR_DOUBLESTAR (103)
    on left: 30 31, on right: 22
fpdef (104)
    on left: 32 33, on right: 23 26 34 285 291
fplist (105)
    on left: 34, on right: 33
stmt (106)
    on left: 35 36, on right: 5 8 152 153
simple_stmt (107)
    on left: 37, on right: 35 150
small_stmt (108)
    on left: 38 39 40 41 42 43 44 45 46, on right: 37 317
expr_stmt (109)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59, on right: 38
pick_yield_expr_testlist (110)
    on left: 60 61, on right: 47 48 49 50 51 52 53 54 55 56 57 58 62
star_EQUAL (111)
    on left: 62 63, on right: 59 62
print_stmt (112)
    on left: 64 65, on right: 39
opt_test (113)
    on left: 66 67, on right: 64
opt_test_2 (114)
    on left: 68 69, on right: 65
del_stmt (115)
    on left: 70, on right: 40
pass_stmt (116)
    on left: 71, on right: 41
flow_stmt (117)
    on left: 72 73 74 75 76, on right: 42
break_stmt (118)
    on left: 77, on right: 72
continue_stmt (119)
    on left: 78, on right: 73
return_stmt (120)
    on left: 79 80, on right: 74
yield_stmt (121)
    on left: 81, on right: 76
raise_stmt (122)
    on left: 82 83, on right: 75
opt_COMMA_test (123)
    on left: 84 85, on right: 86 111
opt_test_3 (124)
    on left: 86 87, on right: 82
import_stmt (125)
    on left: 88 89, on right: 43
import_name (126)
    on left: 90, on right: 88
import_from (127)
    on left: 91 92, on right: 89
star_DOT (128)
    on left: 93 94, on right: 91 93
plus_DOT (129)
    on left: 95 96, on right: 92 95
pick_STAR_import (130)
    on left: 97 98 99, on right: 91 92
import_as_name (131)
    on left: 100 101, on right: 104 303
dotted_as_name (132)
    on left: 102 103, on right: 105 106
import_as_names (133)
    on left: 104, on right: 98 99
dotted_as_names (134)
    on left: 105 106, on right: 90 106
dotted_name (135)
    on left: 107 108, on right: 11 12 91 102 103 108
global_stmt (136)
    on left: 109 110, on right: 44 109
exec_stmt (137)
    on left: 111 112, on right: 45
assert_stmt (138)
    on left: 113 114, on right: 46
compound_stmt (139)
    on left: 115 116 117 118 119 120 121 122, on right: 36
if_stmt (140)
    on left: 123 124, on right: 115
star_ELIF (141)
    on left: 125 126, on right: 123 124 125
while_stmt (142)
    on left: 127 128, on right: 116
for_stmt (143)
    on left: 129 130, on right: 117
try_stmt (144)
    on left: 131 132, on right: 118
plus_except (145)
    on left: 133 134, on right: 131 133
opt_ELSE (146)
    on left: 135 136, on right: 131
opt_FINALLY (147)
    on left: 137 138, on right: 131
with_stmt (148)
    on left: 139, on right: 119
star_COMMA_with_item (149)
    on left: 140 141, on right: 139 140
with_item (150)
    on left: 142 143, on right: 139 140
except_clause (151)
    on left: 144 145, on right: 133 134
pick_AS_COMMA (152)
    on left: 146 147, on right: 148
opt_AS_COMMA (153)
    on left: 148 149, on right: 144
suite (154)
    on left: 150 151, on right: 19 123 124 125 127 128 129 130 131
    132 133 134 135 137 139 254 255
plus_stmt (155)
    on left: 152 153, on right: 151 152
testlist_safe (156)
    on left: 154 155, on right: 270 271
old_test (157)
    on left: 156 157, on right: 154 155 158 159 272 273 278 279 309
    310 311
old_lambdef (158)
    on left: 158 159, on right: 157
test (159)
    on left: 160 161, on right: 24 65 66 82 84 86 111 113 114 123 124
    125 127 128 142 143 144 148 162 227 228 229 230 231 232 238 240
    244 247 248 249 264 265 280 281 294 297 306 307 308 312 313
opt_IF_ELSE (160)
    on left: 162 163, on right: 160
or_test (161)
    on left: 164 165, on right: 156 160 162 165 276 277
and_test (162)
    on left: 166 167, on right: 164 165 167
not_test (163)
    on left: 168 169, on right: 166 167 168
comparison (164)
    on left: 170 171, on right: 169 171
comp_op (165)
    on left: 172 173 174 175 176 177 178 179 180 181 182, on right:
    171
expr (166)
    on left: 183 184, on right: 111 112 142 170 171 184 246 288
xor_expr (167)
    on left: 185 186, on right: 183 184 186
and_expr (168)
    on left: 187 188, on right: 185 186 188
shift_expr (169)
    on left: 189 190, on right: 187 188 190
pick_LEFTSHIFT_RIGHTSHIFT (170)
    on left: 191 192, on right: 190
arith_expr (171)
    on left: 193 194 195, on right: 189 190 194 195
term (172)
    on left: 196 197 198 199 200, on right: 193 194 195 197 198 199
    200
factor (173)
    on left: 201 202 203 204, on right: 196 197 198 199 200 201 202
    203 205
power (174)
    on left: 205 206, on right: 204
star_trailer (175)
    on left: 207 208, on right: 205 206 207
atom (176)
    on left: 209 210 211 212 213 214 215 216, on right: 205 206
pick_yield_expr_testlist_comp (177)
    on left: 217 218, on right: 219
opt_yield_test (178)
    on left: 219 220, on right: 209
opt_listmaker (179)
    on left: 221 222, on right: 210
opt_dictorsetmaker (180)
    on left: 223 224, on right: 211
plus_STRING (181)
    on left: 225 226, on right: 216 225
listmaker (182)
    on left: 227 228, on right: 221
testlist_comp (183)
    on left: 229 230, on right: 218
lambdef (184)
    on left: 231 232, on right: 161
trailer (185)
    on left: 233 234 235, on right: 207
subscriptlist (186)
    on left: 236, on right: 234
subscript (187)
    on left: 237 238 239, on right: 236 300
opt_test_only (188)
    on left: 240 241, on right: 239
opt_sliceop (189)
    on left: 242 243, on right: 239
sliceop (190)
    on left: 244 245, on right: 242
exprlist (191)
    on left: 246, on right: 70 129 130 270 271 276 277
testlist (192)
    on left: 247, on right: 47 48 49 50 51 52 53 54 55 56 57 58 59
    61 79 129 130 256 283
dictorsetmaker (193)
    on left: 248 249, on right: 223
pick_comp_for (194)
    on left: 250 251, on right: 248
pick_for_test (195)
    on left: 252 253, on right: 249
classdef (196)
    on left: 254 255, on right: 17 121
opt_testlist (197)
    on left: 256 257, on right: 254
arglist (198)
    on left: 258 259 260 261 262 263, on right: 13 258
argument (199)
    on left: 264 265, on right: 258 259 260 314 316
opt_comp_for (200)
    on left: 266 267, on right: 264
list_iter (201)
    on left: 268 269, on right: 270 272
list_for (202)
    on left: 270 271, on right: 227 268
list_if (203)
    on left: 272 273, on right: 269
comp_iter (204)
    on left: 274 275, on right: 276 278
comp_for (205)
    on left: 276 277, on right: 229 250 252 266 274
comp_if (206)
    on left: 278 279, on right: 275
testlist1 (207)
    on left: 280 281, on right: 212 281
encoding_decl (208)
    on left: 282, on right: 2
yield_expr (209)
    on left: 283 284, on right: 60 81 217
star_fpdef_notest (210)
    on left: 285 286 287, on right: 34 285
star_COMMA_expr (211)
    on left: 288 289 290, on right: 246 288
star_COMMA_fpdef (212)
    on left: 291 292 293, on right: 23 291
star_COMMA_test (213)
    on left: 294 295 296, on right: 66 228 230 247 253 294
star_test_COLON_test (214)
    on left: 297 298 299, on right: 251 297
star_COMMA_subscript (215)
    on left: 300 301 302, on right: 236 300
star_COMMA_import_as_name (216)
    on left: 303 304 305, on right: 104 303
plus_COMMA_test (217)
    on left: 306 307 308, on right: 68 306
plus_COMMA_old_test (218)
    on left: 309 310 311, on right: 154 309
dictarg (219)
    on left: 312, on right: 263 315
listarg (220)
    on left: 313, on right: 261 262
arglist_postlist (221)
    on left: 314 315 316, on right: 261 314
small_stmt_STAR_OR_SEMI (222)
    on left: 317 318 319, on right: 37 317


State 0

    0 $accept: . start $end

    ASSERT       shift, and go to state 1
    AT           shift, and go to state 2
    BACKQUOTE    shift, and go to state 3
    BREAK        shift, and go to state 4
    CLASS        shift, and go to state 5
    CONTINUE     shift, and go to state 6
    DEF          shift, and go to state 7
    DEL          shift, and go to state 8
    EXEC         shift, and go to state 9
    FOR          shift, and go to state 10
    FROM         shift, and go to state 11
    GLOBAL       shift, and go to state 12
    IF           shift, and go to state 13
    IMPORT       shift, and go to state 14
    LAMBDA       shift, and go to state 15
    LBRACE       shift, and go to state 16
    LPAR         shift, and go to state 17
    LSQB         shift, and go to state 18
    MINUS        shift, and go to state 19
    NEWLINE      shift, and go to state 20
    NOT          shift, and go to state 21
    PASS         shift, and go to state 22
    PLUS         shift, and go to state 23
    PRINT        shift, and go to state 24
    RAISE        shift, and go to state 25
    RETURN       shift, and go to state 26
    STRING       shift, and go to state 27
    TILDE        shift, and go to state 28
    TRY          shift, and go to state 29
    WHILE        shift, and go to state 30
    WITH         shift, and go to state 31
    YIELD        shift, and go to state 32
    FLOATNUMBER  shift, and go to state 33
    INTNUMBER    shift, and go to state 34
    NAME         shift, and go to state 35

    $default  reduce using rule 10 (star_NEWLINE_stmt)

    start              go to state 36
    single_input       go to state 37
    file_input         go to state 38
    pick_NEWLINE_stmt  go to state 39
    star_NEWLINE_stmt  go to state 40
    decorator          go to state 41
    decorators         go to state 42
    decorated          go to state 43
    funcdef            go to state 44
    stmt               go to state 45
    simple_stmt        go to state 46
    small_stmt         go to state 47
    expr_stmt          go to state 48
    print_stmt         go to state 49
    del_stmt           go to state 50
    pass_stmt          go to state 51
    flow_stmt          go to state 52
    break_stmt         go to state 53
    continue_stmt      go to state 54
    return_stmt        go to state 55
    yield_stmt         go to state 56
    raise_stmt         go to state 57
    import_stmt        go to state 58
    import_name        go to state 59
    import_from        go to state 60
    global_stmt        go to state 61
    exec_stmt          go to state 62
    assert_stmt        go to state 63
    compound_stmt      go to state 64
    if_stmt            go to state 65
    while_stmt         go to state 66
    for_stmt           go to state 67
    try_stmt           go to state 68
    with_stmt          go to state 69
    test               go to state 70
    or_test            go to state 71
    and_test           go to state 72
    not_test           go to state 73
    comparison         go to state 74
    expr               go to state 75
    xor_expr           go to state 76
    and_expr           go to state 77
    shift_expr         go to state 78
    arith_expr         go to state 79
    term               go to state 80
    factor             go to state 81
    power              go to state 82
    atom               go to state 83
    plus_STRING        go to state 84
    lambdef            go to state 85
    testlist           go to state 86
    classdef           go to state 87
    encoding_decl      go to state 88
    yield_expr         go to state 89


State 1

  113 assert_stmt: ASSERT . test COMMA test
  114            | ASSERT . test

    BACKQUOTE    shift, and go to state 3
    LAMBDA       shift, and go to state 15
    LBRACE       shift, and go to state 16
    LPAR         shift, and go to state 17
    LSQB         shift, and go to state 18
    MINUS        shift, and go to state 19
    NOT          shift, and go to state 21
    PLUS         shift, and go to state 23
    STRING       shift, and go to state 27
    TILDE        shift, and go to state 28
    FLOATNUMBER  shift, and go to state 33
    INTNUMBER    shift, and go to state 34
    NAME         shift, and go to state 90

    test         go to state 91
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    lambdef      go to state 85


State 2

   11 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 92

    dotted_name  go to state 93


State 3

  212 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE    shift, and go to state 3
    LAMBDA       shift, and go to state 15
    LBRACE       shift, and go to state 16
    LPAR         shift, and go to state 17
    LSQB         shift, and go to state 18
    MINUS        shift, and go to state 19
    NOT          shift, and go to state 21
    PLUS         shift, and go to state 23
    STRING       shift, and go to state 27
    TILDE        shift, and go to state 28
    FLOATNUMBER  shift, and go to state 33
    INTNUMBER    shift, and go to state 34
    NAME         shift, and go to state 90

    test         go to state 94
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    lambdef      go to state 85
    testlist1    go to state 95


State 4

   77 break_stmt: BREAK .

    $default  reduce using rule 77 (break_stmt)


State 5

  254 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  255         | CLASS . NAME COLON suite

    NAME  shift, and go to state 96


State 6

   78 continue_stmt: CONTINUE .

    $default  reduce using rule 78 (continue_stmt)


State 7

   19 funcdef: DEF . NAME parameters COLON suite

    NAME  shift, and go to state 97


State 8

   70 del_stmt: DEL . exprlist

    BACKQUOTE    shift, and go to state 3
    LBRACE       shift, and go to state 16
    LPAR         shift, and go to state 17
    LSQB         shift, and go to state 18
    MINUS        shift, and go to state 19
    PLUS         shift, and go to state 23
    STRING       shift, and go to state 27
    TILDE        shift, and go to state 28
    FLOATNUMBER  shift, and go to state 33
    INTNUMBER    shift, and go to state 34
    NAME         shift, and go to state 90

    expr         go to state 98
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    exprlist     go to state 99


State 9

  111 exec_stmt: EXEC . expr IN test opt_COMMA_test
  112          | EXEC . expr

    BACKQUOTE    shift, and go to state 3
    LBRACE       shift, and go to state 16
    LPAR         shift, and go to state 17
    LSQB         shift, and go to state 18
    MINUS        shift, and go to state 19
    PLUS         shift, and go to state 23
    STRING       shift, and go to state 27
    TILDE        shift, and go to state 28
    FLOATNUMBER  shift, and go to state 33
    INTNUMBER    shift, and go to state 34
    NAME         shift, and go to state 90

    expr         go to state 100
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84


State 10

  129 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  130         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE    shift, and go to state 3
    LBRACE       shift, and go to state 16
    LPAR         shift, and go to state 17
    LSQB         shift, and go to state 18
    MINUS        shift, and go to state 19
    PLUS         shift, and go to state 23
    STRING       shift, and go to state 27
    TILDE        shift, and go to state 28
    FLOATNUMBER  shift, and go to state 33
    INTNUMBER    shift, and go to state 34
    NAME         shift, and go to state 90

    expr         go to state 98
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    exprlist     go to state 101


State 11

   91 import_from: FROM . star_DOT dotted_name IMPORT pick_STAR_import
   92            | FROM . plus_DOT IMPORT pick_STAR_import

    DOT  shift, and go to state 102

    $default  reduce using rule 94 (star_DOT)

    star_DOT  go to state 103
    plus_DOT  go to state 104


State 12

  110 global_stmt: GLOBAL . NAME

    NAME  shift, and go to state 105


State 13

  123 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  124        | IF . test COLON suite star_ELIF

    BACKQUOTE    shift, and go to state 3
    LAMBDA       shift, and go to state 15
    LBRACE       shift, and go to state 16
    LPAR         shift, and go to state 17
    LSQB         shift, and go to state 18
    MINUS        shift, and go to state 19
    NOT          shift, and go to state 21
    PLUS         shift, and go to state 23
    STRING       shift, and go to state 27
    TILDE        shift, and go to state 28
    FLOATNUMBER  shift, and go to state 33
    INTNUMBER    shift, and go to state 34
    NAME         shift, and go to state 90
